# RAG-Retrieval-Augmented-Generation

./: README.md  pyproject.toml  rag.py  requirements.txt
chroma_langchain_docs_db/: chroma.sqlite3
src/: api.py  pdf_to_md_loader.py  rag.py  rag_simple.py
