[project]
name = "rag-retrieval-augmented-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-pymupdf4llm>=1.27.2",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "uvicorn>=0.49.0",
]
